Fix z-index button arrow group in saving.css

--- a/app/assets/stylesheets/savings.scss
+++ b/app/assets/stylesheets/savings.scss
@@ -9,3 +9,7 @@
 ul {
   list-style-type: none;
 }
+
+.slick-prev{
+  z-index: 9999;
+}
